resign endpoint
